# BinaryDecompositionEmbeddings

./: .gitignore  pyproject.toml
.github/workflows/: hello.yaml  issue_comment.yaml  lint copy.yaml  lint.yaml  test.yaml  typecheck.yaml
binary_decomposition_pytorch/: __init__.py  __init__.pyi  modules.py
binary_factored_pytorch/: __init__.py  __init__.pyi  hailstone.py  modules.py
tests/: test.py  test_modules.py
