[tool.poetry]
name = "mit6031"
version = "0.1.0"
description = "Emmett's work on the mit 6031 course"
authors = ["Emmett"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
flake8 = "^7.1.1"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
